KAR008 : Jenkins trop faible machine - Build les dist et publier snif

--- a/StationDemoClient/station-angular4-poc/pom.xml
+++ b/StationDemoClient/station-angular4-poc/pom.xml
@@ -27,7 +27,7 @@
           				<phase>validate</phase>
        				    <goals><goal>copy-resources</goal></goals>
           				<configuration>
-             				<outputDirectory>${basedir}/</outputDirectory >
+             				<outputDirectory>${basedir}/src/main/webapp</outputDirectory >
               				<resources>
                  			   <resource>
                       			  <directory>${basedir}/dist</directory >
