KAR028 : Add gitignore

--- a/StationDemoClient/station-vuejs2-poc/.gitignore
+++ b/StationDemoClient/station-vuejs2-poc/.gitignore
@@ -15,3 +15,7 @@ selenium-debug.log
 *.ntvs*
 *.njsproj
 *.sln
+
+# To avoid vuejs compile file
+src/main/webapp/index.html
+src/main/webapp/static/
