--- a/StationDemoClient/station-angular4-poc/package.json
+++ b/StationDemoClient/station-angular4-poc/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser": "^5.2.4",
     "@angular/platform-browser-dynamic": "^5.2.4",
     "@angular/router": "^5.2.4",
+    "@ngx-translate/core": "^10.0.1",
+    "@ngx-translate/http-loader": "^3.0.1",
     "angular-oauth2-oidc": "^3.1.4",
     "core-js": "^2.4.1",
     "rxjs": "^5.4.2",
