--- a/StationDemoClient/station-angular4-poc/package.json
+++ b/StationDemoClient/station-angular4-poc/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^5.2.4",
     "@angular/platform-browser-dynamic": "^5.2.4",
     "@angular/router": "^5.2.4",
+    "@auth0/angular-jwt": "^1.1.0",
     "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^3.0.1",
     "angular-oauth2-oidc": "^2.0.1",
