--- a/StationDemoClient/station-vuejs2-poc/pom.xml
+++ b/StationDemoClient/station-vuejs2-poc/pom.xml
@@ -14,6 +14,14 @@
 	</properties>
 
 	<dependencies>	
+	
+		<!--  Add it to the Add a validation filter to this "web.xml" of sonar -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+		</dependency>
+		
+	
 	</dependencies>
 
 	<build>
