--- a/StationDemoClient/station-angular4-poc/src/main/webapp/WEB-INF/web.xml
+++ b/StationDemoClient/station-angular4-poc/src/main/webapp/WEB-INF/web.xml
@@ -3,5 +3,15 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee 
          http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
+         
+  <filter>
+     <filter-name>ValidationAngularFilter</filter-name>
+     <filter-class>com.exakaconsulting.poc.filter.ValidationAngularFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+     <filter-name>ValidationAngularFilter</filter-name>
+     <url-pattern>/*</url-pattern>
+  </filter-mapping>
                  
 </web-app>
