--- a/StationDemoClient/station-angular4-poc/pom.xml
+++ b/StationDemoClient/station-angular4-poc/pom.xml
@@ -34,7 +34,7 @@
           				<phase>validate</phase>
        				    <goals><goal>copy-resources</goal></goals>
           				<configuration>
-             				<outputDirectory>${basedir}/src/main/webapp</outputDirectory >
+             				<outputDirectory>${project.build.directory}/${project.build.finalName}</outputDirectory >
               				<resources>
                  			   <resource>
                       			  <directory>${basedir}/dist</directory >
