--- a/StationDemoClient/station-angular4-poc/package.json
+++ b/StationDemoClient/station-angular4-poc/package.json
@@ -8,7 +8,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "staging": "ng build --staging --env=staging --base-href=/station-angular4-poc/ --output-path=dist",
+    "prod": "ng build --prod --env=prod --base-href=/station-angular4-poc/ --output-path=dist"
   },
   "private": true,
   "dependencies": {
