Work with nginx

--- a/StationDemoClient/station-angular4-poc/package.json
+++ b/StationDemoClient/station-angular4-poc/package.json
@@ -10,8 +10,9 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "staging": "ng build --staging --env=staging --base-href=/station-angular4-poc/ --output-path=dist",
-    "prod": "ng build --prod --env=prod --base-href=/station-angular4-poc/ --output-path=dist",
-    "prod-zip": "ng build --prod --env=prod --base-href=/station-angular4-poc/ --output-path=dist ; gzip -r generatedsite/station-angular4-poc.zip dist;"
+    "staging-zip": "ng build --staging --env=staging --base-href=/station-angular4-poc/ --output-path=dist/station-angular4-poc/",
+	"prod": "ng build --prod --env=prod --base-href=/station-angular4-poc/ --output-path=dist",
+    "prod-zip": "ng build --prod --env=prod --base-href=/station-angular4-poc/ --output-path=dist/station-angular4-poc/ ; gzip -r generatedsite/station-angular4-poc.zip dist;"
   },
   "private": true,
   "dependencies": {
