Adaptation build.sh

--- a/StationDemoClient/station-angular4-poc/dockerwithtomcat/Dockerfile
+++ b/StationDemoClient/station-angular4-poc/dockerwithtomcat/Dockerfile
@@ -2,4 +2,4 @@ FROM tomcat:latest
 
 MAINTAINER Karim GZ "kagzouli@exaka.com"
 
-ADD webapps/station-angular4-poc.war /usr/local/tomcat/webapps/station-angular4-poc.war
+ADD ../target/station-angular4-poc.war /usr/local/tomcat/webapps/station-angular4-poc.war
