--- a/StationDemoClient/station-angular4-poc/dockerwithnginx/conf/nginx.conf
+++ b/StationDemoClient/station-angular4-poc/dockerwithnginx/conf/nginx.conf
@@ -18,6 +18,10 @@ http {
         gzip_proxied expired no-cache no-store private auth;
         gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
+		location /assets/ {
+			# Do nothing. 
+		}
+		
         location / {
             try_files $uri $uri/ /station-angular4-poc/index.html;
         }
