Image json location

--- a/StationDemoClient/station-angular4-poc/dockerwithnginx/conf/nginx.conf
+++ b/StationDemoClient/station-angular4-poc/dockerwithnginx/conf/nginx.conf
@@ -18,8 +18,8 @@ http {
         gzip_proxied expired no-cache no-store private auth;
         gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
-		location /assets/ {
-			# Do nothing. 
+		location ~*  \.(css|js|js.map|html|htm|gif|ico|svg|png|jpg|jpeg|eot|woff|woff2|ttf|woff|json)$ {
+			expires 365d;
 		}
 		
         location / {
