--- a/StationDemoClient/station-angular4-poc/pom.xml
+++ b/StationDemoClient/station-angular4-poc/pom.xml
@@ -93,6 +93,21 @@
 					</configuration>
 				</execution>
 				
+				<execution>
+					<id>npm run-script prod-zip</id>
+					<goals>
+						<goal>exec</goal>
+					</goals>
+					<phase>prepare-package</phase>
+					<configuration>
+						<executable>${npm.executable}</executable>
+						<arguments>
+						    <argument>run-script</argument>
+							<argument>prod-zip</argument>
+						</arguments>
+					</configuration>
+				</execution>
+				
 			</executions>
 	    </plugin>
 
@@ -109,7 +124,7 @@
              				<outputDirectory>${project.build.directory}/${project.build.finalName}</outputDirectory >
               				<resources>
                  			   <resource>
-                      			  <directory>${basedir}/dist</directory >
+                      			  <directory>${basedir}/distTomcat</directory >
                 			  </resource>
              			   </resources>
           				</configuration>
