--- a/StationDemoClient/station-angular4-poc/dockerwithnginx/Dockerfile
+++ b/StationDemoClient/station-angular4-poc/dockerwithnginx/Dockerfile
@@ -4,6 +4,5 @@ MAINTAINER Karim GZ "kagzouli@exaka.com"
 
 ADD conf/nginx.conf /etc/nginx/nginx.conf
 
-WORKDIR /usr/share/nginx/html/station-angular4-poc
-ADD dist/* /usr/share/nginx/html/station-angular4-poc/
+ADD dist/* /usr/share/nginx/html/
 
