--- a/StationDemoClient/station-angular4-poc/package.json
+++ b/StationDemoClient/station-angular4-poc/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0 -port 3000 --disable-host-check",
+    "start": "ng serve --host 0.0.0.0 -port 3000 --base-href=/station-angular4-poc/ --disable-host-check",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
