--- a/StationDemoClient/station-angular4-poc/dockerwithtomcat/Dockerfile
+++ b/StationDemoClient/station-angular4-poc/dockerwithtomcat/Dockerfile
@@ -2,4 +2,5 @@ FROM tomcat:latest
 
 MAINTAINER Karim GZ "kagzouli@exaka.com"
 
+RUN rm -rf /usr/local/tomcat/webapps/*
 ADD station-angular4-poc.war /usr/local/tomcat/webapps/station-angular4-poc.war
