--- a/StationDemoClient/station-angular4-poc/dockerwithnginx/Dockerfile
+++ b/StationDemoClient/station-angular4-poc/dockerwithnginx/Dockerfile
@@ -4,5 +4,6 @@ MAINTAINER Karim GZ "kagzouli@exaka.com"
 
 ADD conf/nginx.conf /etc/nginx/nginx.conf
 
+RUN rm -rf /usr/share/nginx/html/*
 ADD dist /usr/share/nginx/html/
 
