Disable server tokens

--- a/StationDemoClient/station-angular4-poc/dockerwithnginx/conf/nginx.conf
+++ b/StationDemoClient/station-angular4-poc/dockerwithnginx/conf/nginx.conf
@@ -15,6 +15,7 @@ http {
 
         gzip on;
         gzip_min_length 1000;
+        server_tokens   off;
         gzip_proxied expired no-cache no-store private auth;
         gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
