--- a/StationDemoClient/station-angular4-poc/dockerwithnginx/conf/nginx.conf
+++ b/StationDemoClient/station-angular4-poc/dockerwithnginx/conf/nginx.conf
@@ -22,6 +22,11 @@ http {
 		location ~*  \.(css|js|js.map|html|htm|gif|ico|svg|png|jpg|jpeg|eot|woff|woff2|ttf|woff|json)$ {
 			expires 365d;
 		}
+
+        error_page 404  /404.html;
+	location = /404.html {
+		root /usr/share/nginx/;
+	}
 		
         location / {
             try_files $uri $uri/ /station-angular4-poc/index.html;
