--- a/StationDemoClient/station-angular4-poc/src/assets/config/configuration.json
+++ b/StationDemoClient/station-angular4-poc/src/assets/config/configuration.json
@@ -1,5 +1,5 @@
 {
        "clientIdTrafStat": "0oaeg3yghaL9mQalz0h7",
        "oktaUrl": "https://dev-884254.oktapreview.com",
-       "contextPathTrafStation": "http://51.254.36.122:4000/StationDemoSecureWeb"
+       "contextPathTrafStation": "http://localhost:8080/StationDemoSecureWeb"
 }
