Not copying configuration.json - Correction

--- a/StationDemoClient/station-angular4-poc/dockerwithnginx/Dockerfile
+++ b/StationDemoClient/station-angular4-poc/dockerwithnginx/Dockerfile
@@ -2,7 +2,7 @@ FROM nginx:latest
 
 MAINTAINER Karim GZ "kagzouli@exaka.com"
 
-ADD conf/configuration.json /usr/share/nginx/html/station-angular4-poc/assets/config/configuration.json
+COPY conf/configuration.json /usr/share/nginx/html/station-angular4-poc/assets/config/
 ADD conf/nginx.conf /etc/nginx/nginx.conf
 ADD page/404.html /usr/share/nginx/404.html
 
