--- a/StationDemoClient/station-angular4-poc/dockerwithnginx/Dockerfile
+++ b/StationDemoClient/station-angular4-poc/dockerwithnginx/Dockerfile
@@ -9,6 +9,6 @@ RUN rm -rf /usr/share/nginx/html/*
 ADD dist /usr/share/nginx/html/
 
 ADD conf/configuration.json /usr/share/nginx/html/station-angular4-poc/assets/config/
-RUN sed -i 's|{CLIENT_ID_TRAF_STAT}|${CLIENT_ID_TRAF_STAT}|g' /usr/share/nginx/html/station-angular4-poc/assets/config/configuration.json 
-RUN sed -i 's|{OKTA_URL}|${OKTA_URL}|g' /usr/share/nginx/html/station-angular4-poc/assets/config/configuration.json
-RUN sed -i 's|{CONTEXT_BACK_URL}|${CONTEXT_BACK_URL}|g' /usr/share/nginx/html/station-angular4-poc/assets/config/configuration.json
+RUN sed -i "s|{CLIENT_ID_TRAF_STAT}|${CLIENT_ID_TRAF_STAT}|g" /usr/share/nginx/html/station-angular4-poc/assets/config/configuration.json 
+RUN sed -i "s|{OKTA_URL}|${OKTA_URL}|g" /usr/share/nginx/html/station-angular4-poc/assets/config/configuration.json
+RUN sed -i "s|{CONTEXT_BACK_URL}|${CONTEXT_BACK_URL}|g" /usr/share/nginx/html/station-angular4-poc/assets/config/configuration.json
