--- a/application/StationDemoClient/station-angular4-poc/dockerwithnginx/conf/nginx.conf
+++ b/application/StationDemoClient/station-angular4-poc/dockerwithnginx/conf/nginx.conf
@@ -1,6 +1,5 @@
-pid /var/log/nginx/nginx.pid;
-
 worker_processes  1;
+pid        /var/run/nginx.pid;
 
 events {
     worker_connections  1024;
@@ -31,7 +30,7 @@ http {
 	}
 		
         location / {
-            try_files $uri $uri/ /station-angular4-poc/index.html;
+            try_files $uri $uri/ /station-angular4-poc/index.html =404;
         }
     }
 }
