--- a/application/StationDemoClient/station-angular4-poc/dockerwithnginx/conf/nginx.conf
+++ b/application/StationDemoClient/station-angular4-poc/dockerwithnginx/conf/nginx.conf
@@ -30,7 +30,7 @@ http {
 	}
 		
         location / {
-            try_files $uri $uri/ /station-angular4-poc/index.html =404;
+            try_files $uri /station-angular4-poc/index.html =404;
         }
     }
 }
