Correction vulnerabilite okta + montee version 1.3.1

--- a/application/spring-java/StationDemoService/pom.xml
+++ b/application/spring-java/StationDemoService/pom.xml
@@ -93,6 +93,10 @@
 			<groupId>com.okta.jwt</groupId>
 			<artifactId>okta-jwt-verifier</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.okta.jwt</groupId>
+			<artifactId>okta-jwt-verifier-impl</artifactId>
+		</dependency>
 		
 		
 		<!--  Redis -->
