--- a/application/StationDemoClient/station-angular4-poc/package.json
+++ b/application/StationDemoClient/station-angular4-poc/package.json
@@ -7,7 +7,7 @@
   ],
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0 -port 80 --base-href=/station-angular4-poc/ --disable-host-check",
+    "start": "ng serve --host 0.0.0.0 --port 80 --base-href /station-angular4-poc/ --disable-host-check",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -38,7 +38,8 @@
     "zone.js": "0.10.3"
   },
   "devDependencies": {
-    "@angular/cli": "7.3.10",
+    "@angular-devkit/build-angular": "^0.901.13",
+    "@angular/cli": "^9.1.13",
     "@angular/compiler-cli": "9.1.13",
     "@angular/language-service": "9.1.13",
     "@types/jasmine": "~2.5.53",
