--- a/application/StationDemoClient/station-angular4-poc/package.json
+++ b/application/StationDemoClient/station-angular4-poc/package.json
@@ -18,45 +18,46 @@
     "prod-zip": "ng build --prod --env=prod --base-href=/station-angular4-poc/ --output-path=dist/station-angular4-poc/"
   },
   "dependencies": {
-    "@angular/animations": "9.1.13",
-    "@angular/cdk": "9.2.4",
-    "@angular/common": "9.1.13",
-    "@angular/compiler": "9.1.13",
-    "@angular/core": "9.1.13",
-    "@angular/forms": "9.1.13",
-    "@angular/material": "9.2.4",
-    "@angular/platform-browser": "9.1.13",
-    "@angular/platform-browser-dynamic": "9.1.13",
-    "@angular/router": "9.1.13",
+    "@angular/animations": "12.2.17",
+    "@angular/cdk": "12.2.13",
+    "@angular/common": "12.2.17",
+    "@angular/compiler": "12.2.17",
+    "@angular/core": "12.2.17",
+    "@angular/forms": "12.2.17",
+    "@angular/material": "12.2.13",
+    "@angular/platform-browser": "12.2.17",
+    "@angular/platform-browser-dynamic": "12.2.17",
+    "@angular/router": "12.2.17",
     "@auth0/angular-jwt": "^4.2.0",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^2.0.1",
+    "@auth0/auth0-angular" : "1.11.1",
     "angular-oauth2-oidc": "9.0.0",
     "core-js": "^2.4.1",
     "rxjs": "6.6.7",
     "rxjs-compat": "6.6.7",
-    "zone.js": "0.10.3"
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.13",
-    "@angular/cli": "^9.1.13",
-    "@angular/compiler-cli": "9.1.13",
-    "@angular/language-service": "9.1.13",
+    "@angular-devkit/build-angular": "^12.2.18",
+    "@angular/cli": "^12.2.17",
+    "@angular/compiler-cli": "12.2.17",
+    "@angular/language-service": "12.2.17",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "codelyzer": "5.2.2",
+    "codelyzer": "6.0.2",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~5.2.3",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-cli": "~2.0.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "^7.0.0",
     "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "~3.8.3"
+    "tslint": "~6.1.3",
+    "typescript": "~4.3.5"
   }
 }
