--- a/application/StationDemoClient/station-angular4-poc/angular.json
+++ b/application/StationDemoClient/station-angular4-poc/angular.json
@@ -17,7 +17,8 @@
             "tsConfig": "tsconfig.app.json",
             "assets": ["src/assets"],
             "styles": ["src/styles.css"],
-            "scripts": []
+            "scripts": [],
+            "baseHref": "/station-angular4-poc"
           }
         },
         "serve": {
