--- a/application/StationDemoClient/station-angular4-poc/package.json
+++ b/application/StationDemoClient/station-angular4-poc/package.json
@@ -7,7 +7,7 @@
   ],
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0 --port 80 --configuration=development --ssl --ssl-key ssldev/key.pem --ssl-cert ssldev/cert.pem --base-href /station-angular4-poc/ --disable-host-check",
+    "start": "ng serve --host station.exakaconsulting.org --port 443 --configuration=development --ssl  --base-href /station-angular4-poc/ --disable-host-check",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
