--- a/application/StationDemoClient/station-angular4-poc/src/assets/config/configuration.json
+++ b/application/StationDemoClient/station-angular4-poc/src/assets/config/configuration.json
@@ -1,5 +1,5 @@
 {
        "clientIdTrafStat": "WcfX8ATlmstSllDzo0nCRqDQeWMcfu2A",
-       "oktaUrl": "dev-yqv4qm6lycv6w51d.okta.com",
+       "oktaUrl": "dev-yqv4qm6lycv6w51d.us.auth0.com",
        "contextPathTrafStation": "http://localhost:8080/StationDemoSecureWeb"
 }
