--- a/application/StationDemoClient/station-angular4-poc/package.json
+++ b/application/StationDemoClient/station-angular4-poc/package.json
@@ -12,10 +12,10 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "staging": "ng build --staging --env=staging --configuration=production --base-href=/station-angular4-poc/ --output-path=distTomcat",
-    "staging-zip": "ng build --staging --env=staging --configuration=production --base-href=/station-angular4-poc/ --output-path=dist/station-angular4-poc/",
-    "prod": "ng build  --env=prod --configuration=production --base-href=/station-angular4-poc/ --output-path=distTomcat",
-    "prod-zip": "ng build --env=prod --configuration=production --base-href=/station-angular4-poc/ --output-path=dist/station-angular4-poc/"
+    "staging": "ng build --staging  --configuration=production --base-href=/station-angular4-poc/ --output-path=distTomcat",
+    "staging-zip": "ng build --staging  --configuration=production --base-href=/station-angular4-poc/ --output-path=dist/station-angular4-poc/",
+    "prod": "ng build  --configuration=production --base-href=/station-angular4-poc/ --output-path=distTomcat",
+    "prod-zip": "ng build  --configuration=production --base-href=/station-angular4-poc/ --output-path=dist/station-angular4-poc/"
   },
   "dependencies": {
     "@angular/animations": "12.2.17",
