Correction evolution rxjs qui fait planter lors des optimisations

--- a/application/StationDemoClient/station-angular4-poc/angular.json
+++ b/application/StationDemoClient/station-angular4-poc/angular.json
@@ -10,7 +10,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/station-angular4-poc",
+            "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
