--- a/application/StationDemoClient/station-angular4-poc/tsconfig.json
+++ b/application/StationDemoClient/station-angular4-poc/tsconfig.json
@@ -8,7 +8,8 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es5",
+    "target": "ES2022",
+    "useDefineForClassFields": false,
     "typeRoots": [
       "node_modules/@types"
     ],
