--- a/application/StationDemoClient/station-angular4-poc/package.json
+++ b/application/StationDemoClient/station-angular4-poc/package.json
@@ -18,34 +18,33 @@
     "prod-zip": "ng build  --configuration=production --base-href=/station-angular4-poc/ --output-path=dist/station-angular4-poc/"
   },
   "dependencies": {
-    "@angular/animations": "15.2.9",
-    "@angular/cdk": "15.2.9",
-    "@angular/common": "15.2.9",
-    "@angular/compiler": "15.2.9",
-    "@angular/core": "15.2.9",
-    "@angular/forms": "15.2.9",
-    "@angular/material": "15.2.9",
-    "@angular/platform-browser": "15.2.9",
-    "@angular/platform-browser-dynamic": "15.2.9",
-    "@angular/router": "15.2.9",
+    "@angular/animations": "19.2.17",
+    "@angular/cdk": "19.2.17",
+    "@angular/common": "19.2.17",
+    "@angular/compiler": "19.2.17",
+    "@angular/core": "19.2.17",
+    "@angular/forms": "19.2.17",
+    "@angular/material": "19.2.17",
+    "@angular/platform-browser": "19.2.17",
+    "@angular/platform-browser-dynamic": "19.2.17",
+    "@angular/router": "19.2.17",
     "@auth0/angular-jwt": "^4.2.0",
-    "@ngx-translate/core": "^12.1.2",
-    "@ngx-translate/http-loader": "^2.0.1",
-    "@auth0/auth0-angular" : "1.11.1",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
+    "@auth0/auth0-angular" : "2.2.3",
     "core-js": "^3.47.0",
-    "rxjs": "6.6.7",
+    "rxjs": "7.8.1",
     "rxjs-compat": "6.6.7",
-    "zone.js": "0.11.4"
+    "zone.js": "^0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.7",
-    "@angular/cli": "^15.2.9",
-    "@angular/compiler-cli": "15.2.9",
-    "@angular/language-service": "15.2.9",
+    "@angular-devkit/build-angular": "^19.2.17",
+    "@angular/cli": "^19.2.17",
+    "@angular/compiler-cli": "19.2.17",
+    "@angular/language-service": "19.2.17",
     "@types/jasmine": "~4.3.1",
     "@types/jasminewd2": "~2.0.12",
     "@types/node": "~6.0.60",
-    "codelyzer": "6.0.2",
     "jasmine-core": "~4.5.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.2",
@@ -54,9 +53,8 @@
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "protractor": "^7.0.0",
     "ts-node": "~10.9.1",
     "tslint": "~6.1.3",
-    "typescript": "~4.8.2"
+    "typescript": "~5.5.4"
   }
 }
