--- a/application/StationDemoClient/station-angular4-poc/angular.json
+++ b/application/StationDemoClient/station-angular4-poc/angular.json
@@ -10,7 +10,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist",
+            "outputPath": "dist/station-angular4-poc",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -18,7 +18,7 @@
             "assets": ["src/assets"],
             "styles": ["src/styles.css"],
             "scripts": [],
-            "baseHref": "/station-angular4-poc"
+            "baseHref": "/station-angular4-poc/"
           },
           "configurations": {
             "production": {
@@ -35,21 +35,50 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "station-angular4-poc:build:development"
+            "buildTarget": "station-angular4-poc:build",
+            "host": "station.exakaconsulting.org",
+            "port": 443,
+            "ssl": true
           },
           "configurations": {
             "production": {
-              "browserTarget": "station-angular4-poc:build:production"
+              "buildTarget": "station-angular4-poc:build:production"
             },
             "development": {
-              "browserTarget": "station-angular4-poc:build:development"
+              "buildTarget": "station-angular4-poc:build:development"
             }
+          }
+        },
+
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "src/test.ts",
+            "polyfills": "src/polyfills.ts",
+            "tsConfig": "tsconfig.spec.json",
+            "karmaConfig": "karma.conf.js",
+            "assets": ["src/assets"],
+            "styles": ["src/styles.css"],
+            "scripts": []
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": ["tsconfig.app.json", "tsconfig.spec.json"],
+            "exclude": ["**/node_modules/**"]
+          }
+        },
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "e2e/protractor.conf.js",
+            "devServerTarget": "station-angular4-poc:serve"
           }
         }
       }
     }
   },
-  "defaultProject": "station-angular4-poc",
   "cli": {
     "analytics": false
   }
