--- a/application/StationDemoClient/station-angular4-poc/package.json
+++ b/application/StationDemoClient/station-angular4-poc/package.json
@@ -27,9 +27,9 @@
     "@angular/platform-browser-dynamic": "21.0.2",
     "@angular/router": "21.0.2",
     "@auth0/angular-jwt": "^4.2.0",
-    "@auth0/auth0-angular": "2.2.3",
-    "@ngx-translate/core": "^15.0.0",
-    "@ngx-translate/http-loader": "^8.0.0",
+    "@auth0/auth0-angular": "^2.3.0",
+    "@ngx-translate/core": "^17.0.0",
+    "@ngx-translate/http-loader": "^17.0.0",
     "core-js": "^3.47.0",
     "rxjs": "7.8.1",
     "rxjs-compat": "6.6.7",
