--- a/application/StationDemoClient/station-angular4-poc/package.json
+++ b/application/StationDemoClient/station-angular4-poc/package.json
@@ -31,9 +31,9 @@
     "@ngx-translate/core": "^17.0.0",
     "@ngx-translate/http-loader": "^17.0.0",
     "core-js": "^3.47.0",
-    "rxjs": "7.8.1",
-    "rxjs-compat": "6.6.7",
-    "zone.js": "^0.15.0"
+    "rxjs": "^7.8.2",
+    "rxjs-compat": "^6.6.7",
+    "zone.js": "^0.16.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^21.0.2",
