--- a/application/StationDemoClient/station-angular4-poc/package.json
+++ b/application/StationDemoClient/station-angular4-poc/package.json
@@ -32,7 +32,6 @@
     "@ngx-translate/http-loader": "^17.0.0",
     "core-js": "^3.47.0",
     "rxjs": "^7.8.2",
-    "rxjs-compat": "^6.6.7",
     "zone.js": "^0.16.0"
   },
   "devDependencies": {
@@ -49,10 +48,9 @@
     "karma-chrome-launcher": "~3.2.0",
     "karma-cli": "~2.0.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "~5.1.0",
+    "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "ts-node": "~10.9.1",
-    "tslint": "~6.1.3",
+    "ts-node": "^10.9.2",
     "typescript": "~5.9.0"
   }
 }
