--- a/application/StationDemoClient/station-angular4-poc/package.json
+++ b/application/StationDemoClient/station-angular4-poc/package.json
@@ -42,6 +42,7 @@
     "@types/jasmine": "~4.3.1",
     "@types/jasminewd2": "~2.0.12",
     "@types/node": "^22.19.1",
+    "eslint": "^9.39.1",
     "jasmine-core": "~4.5.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.2",
