--- a/application/StationDemoClient/station-angular4-poc/package.json
+++ b/application/StationDemoClient/station-angular4-poc/package.json
@@ -16,16 +16,16 @@
     "prod-zip": "ng build station-angular4-poc  --configuration=production --base-href=/station-angular4-poc/ --output-path=dist/station-angular4-poc/"
   },
   "dependencies": {
-    "@angular/animations": "21.0.3",
+    "@angular/animations": "21.0.2",
     "@angular/cdk": "21.0.2",
-    "@angular/common": "21.0.3",
-    "@angular/compiler": "21.0.3",
-    "@angular/core": "21.0.3",
-    "@angular/forms": "21.0.3",
+    "@angular/common": "21.0.2",
+    "@angular/compiler": "21.0.2",
+    "@angular/core": "21.0.2",
+    "@angular/forms": "21.0.2",
     "@angular/material": "21.0.2",
-    "@angular/platform-browser": "21.0.3",
-    "@angular/platform-browser-dynamic": "21.0.3",
-    "@angular/router": "21.0.3",
+    "@angular/platform-browser": "21.0.2",
+    "@angular/platform-browser-dynamic": "21.0.2",
+    "@angular/router": "21.0.2",
     "@auth0/angular-jwt": "^5.2.0",
     "@auth0/auth0-angular": "^2.3.0",
     "@ngx-translate/core": "^17.0.0",
@@ -35,10 +35,10 @@
     "zone.js": "^0.16.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^21.0.2",
-    "@angular/cli": "^21.0.2",
-    "@angular/compiler-cli": "21.0.3",
-    "@angular/language-service": "21.0.3",
+    "@angular-devkit/build-angular": "21.0.2",
+    "@angular/cli": "21.0.2",
+    "@angular/compiler-cli": "21.0.2",
+    "@angular/language-service": "21.0.2",
     "@types/jasmine": "~4.3.1",
     "@types/jasminewd2": "~2.0.12",
     "@types/node": "^22.19.1",
