--- a/application/StationDemoClient/station-angular4-poc/tsconfig.json
+++ b/application/StationDemoClient/station-angular4-poc/tsconfig.json
@@ -5,7 +5,9 @@
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
-    "moduleResolution": "node",
+    "module": "ES2022",
+    "moduleResolution": "bundler",
+    "skipLibCheck": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "ES2022",
@@ -14,7 +16,7 @@
       "node_modules/@types"
     ],
     "lib": [
-      "es2017",
+      "ES2022",
       "dom"
     ]
   }
