--- a/application/StationDemoClient/station-angular4-poc/tsconfig.json
+++ b/application/StationDemoClient/station-angular4-poc/tsconfig.json
@@ -6,7 +6,7 @@
     "sourceMap": true,
     "declaration": false,
     "module": "ES2022",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "skipLibCheck": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
