--- a/application/StationDemoClient/station-angular4-poc/tsconfig.app.json
+++ b/application/StationDemoClient/station-angular4-poc/tsconfig.app.json
@@ -5,7 +5,7 @@
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
-    "moduleResolution": "node",
+    "moduleResolution": "node16",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "types": []
