--- a/application/StationDemoClient/station-angular4-poc/package.json
+++ b/application/StationDemoClient/station-angular4-poc/package.json
@@ -2,6 +2,7 @@
   "name": "@exakaconsulting/station-angular4-poc",
   "version": "0.0.1-SNAPSHOT",
   "license": "MIT",
+  "type": "module",
   "files": [
     "dist"
   ],
