--- a/application/StationDemoClient/station-angular4-poc/src/tsconfig.spec.json
+++ b/application/StationDemoClient/station-angular4-poc/src/tsconfig.spec.json
@@ -5,7 +5,7 @@
     "baseUrl": "./",
     "sourceMap": true,
     "declaration": false,
-    "moduleResolution": "node16",
+    "moduleResolution": "Node16",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "types": [
